# BattleshipOpenGL

./: AiEngine.cpp  AiEngine.h  CMakeLists.txt  Game.h  GameEngine.h  Player.h  Point.cpp  Point.h  READ-ME-FOOL  README.md  Ship.h  main.cpp  main_engine
Engine/: Engine.cpp  Engine.h  GameManager.cpp  GameManager.h  Texture.cpp
Engine/Graphics/: Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
Engine/Graphics/SOIL/lib/: SOIL.lib
Engine/IO/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
cmake/: FindSDL2TTF.cmake  FindSDL2_image.cmake
logic/ai-engine/: AiEngine.cpp  AiEngine.h
logic/game-engine/: GameEngine.cpp  GameEngine.h
logic/model/: Game.cpp  Game.h  Player.cpp  Player.h  Point.cpp  Point.h  Ship.cpp  Ship.h
